infra/k8s/client-depl.yaml
apiVersion: apps/v1 # deployment is within this apps bucket
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector: # tells deployment to manage all pods with label 'app': 'client'
    matchLabels:
      app: client
  template: # config applied to pods created, labels pods created with 'app': 'client'
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: mattpodolak/client:latest # dont necessarily need latest it is implicit without any version
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
      app: client
  type: ClusterIP # this is the default type if not specified
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
