infra/k8s/comments.depl.yaml
apiVersion: apps/v1 # deployment is within this apps bucket
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector: # tells deployment to manage all pods with label 'app': 'comments'
    matchLabels:
      app: comments
  template: # config applied to pods created, labels pods created with 'app': 'comments'
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: mattpodolak/comments:latest # dont necessarily need latest it is implicit without any version
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
      app: comments
  type: ClusterIP # this is the default type if not specified
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
