infra/k8s/moderation-depl.yaml
apiVersion: apps/v1 # deployment is within this apps bucket
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector: # tells deployment to manage all pods with label 'app': 'moderation'
    matchLabels:
      app: moderation
  template: # config applied to pods created, labels pods created with 'app': 'moderation'
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: mattpodolak/moderation:latest # dont necessarily need latest it is implicit without any version
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
      app: moderation
  type: ClusterIP # this is the default type if not specified
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
