infra/k8s/query-depl.yaml
apiVersion: apps/v1 # deployment is within this apps bucket
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector: # tells deployment to manage all pods with label 'app': 'query'
    matchLabels:
      app: query
  template: # config applied to pods created, labels pods created with 'app': 'query'
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: mattpodolak/query:latest # dont necessarily need latest it is implicit without any version
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
      app: query
  type: ClusterIP # this is the default type if not specified
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
