infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # will allow us to use regex in paths
spec: 
  rules: # routing rules
    - host: posts.com # can host many different domains within a single cluster, for dev need to modify PC hosts file
      http:
        paths:
          - path: /posts/create # can only route based on path, not based on method (POST, GET, etc)
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: query-srv
              servicePort: 4002
          - path: /posts/?(.*)/comments # this is a wildcard regex expression replacing /posts/:id/comments
            backend:
              serviceName: comments-srv
              servicePort: 4001
          - path: / # / is not good for react router, need /?(.*) always at the bottom
            backend:
              serviceName: client-srv
              servicePort: 3000
